fixed spacing

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   align-items: center;
   justify-content: space-between; /* Distribute space between items */
   width: 100%;
-  padding: 10px 20px;
+  padding: 10px 5px;
 }
 
 .back-button {
@@ -76,7 +76,7 @@ body {
 .welcome-section {
   padding-top: 0;
   width: 100%;
-  max-width: 400px;
+  padding: 10px 5px;
 }
 
 .welcome-section h2 {
